migarate kotlin synthetic to viewbinding

--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -26,6 +26,11 @@ android {
         }
 
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+        compose true
+    }
     composeOptions {
         kotlinCompilerVersion "1.5.10"
         kotlinCompilerExtensionVersion "1.0.0-beta08"
