--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -216,4 +216,18 @@ dependencies {
      * ===============================monitor end=============================
      */
 
+    /**
+     *===============================ui start=============================
+     */
+    api "androidx.compose.ui:ui:$compose_version"
+    api "androidx.compose.material:material:$compose_version"
+    api "androidx.compose.ui:ui-tooling:$compose_version"
+    api 'androidx.activity:activity-compose:1.3.0-beta02'
+    api "androidx.compose.compiler:compiler:1.0.0-beta08"
+    androidTestApi "androidx.compose.ui:ui-test-junit4:$compose_version"
+    /**
+     *===============================ui end=============================
+     */
+
+
 }
