--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -46,5 +46,6 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-location:16.0.0'
 //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
     api 'io.github.jamesfchen:lifecycle-api:1.0.2'
+    implementation "androidx.startup:startup-runtime:1.0.0"
 }
 
