--- a/framework/loader/src/main/AndroidManifest.xml
+++ b/framework/loader/src/main/AndroidManifest.xml
@@ -81,5 +81,14 @@
         <!--        <meta-data-->
         <!--            android:name="firebase_performance_collection_deactivated"-->
         <!--            android:value="true" />-->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data
+                android:name="com.jamesfchen.loader.AppInitializer"
+                android:value="androidx.startup" />
+        </provider>
     </application>
 </manifest>
