--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -90,15 +90,9 @@ dependencies {
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:1.4.0-rc01"
+    api "com.google.android.material:material:1.4.0"
     api 'androidx.vectordrawable:vectordrawable:1.1.0'
 
-    api "androidx.compose.ui:ui:$compose_version"
-    api "androidx.compose.material:material:$compose_version"
-    api "androidx.compose.ui:ui-tooling:$compose_version"
-    api 'androidx.activity:activity-compose:1.3.0-beta02'
-    api "androidx.compose.compiler:compiler:1.0.0-beta08"
-    androidTestApi "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     //animotor
     api 'com.airbnb.android:lottie:3.2.2'
