add startup lib

--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin-android'
 //apply plugin: 'kotlin-android-extensions'
 apply from: "${rootDir.path}/script/console.gradle"
+apply plugin: 'kotlin-kapt'
 //def snmae=
 //def lastindex= snmae.indexOf('ModulePlugin')
 //def type= snmae.substring(0,lastindex).toLowerCase()
