--- a/framework/loader/src/main/AndroidManifest.xml
+++ b/framework/loader/src/main/AndroidManifest.xml
@@ -87,7 +87,14 @@
             android:exported="false"
             tools:node="merge">
             <meta-data
-                android:name="com.jamesfchen.loader.AppInitializer"
+                android:name="com.jamesfchen.loader.RouterInitializer"
+                android:value="androidx.startup" />
+<!--                tools:node="remove"-->
+            <meta-data
+                android:name="com.jamesfchen.loader.ApmInitializer"
+                android:value="androidx.startup" />
+            <meta-data
+                android:name="com.jamesfchen.loader.LoggerInitializer"
                 android:value="androidx.startup" />
         </provider>
     </application>
