--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -97,8 +97,8 @@ dependencies {
     /**
      * ===============================async start================================
      */
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+//    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     api "org.jetbrains.anko:anko-coroutines:0.10.8"
     api "io.reactivex.rxjava2:rxkotlin:2.3.0"
     api "io.reactivex.rxjava2:rxjava:2.2.18"
