--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
+//apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply from: "${rootDir.path}/script/console.gradle"
 //def snmae=
 //def lastindex= snmae.indexOf('ModulePlugin')
