--- a/script/foundation_module.gradle
+++ b/script/foundation_module.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply from: "${rootDir.path}/script/base_module.gradle"
-apply plugin: 'kotlin-kapt'
+//apply plugin: 'kotlin-kapt'
 //class ExtSourceSetsPlugin implements Plugin<Project> {
 //
 //    @Override
