--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -219,12 +219,32 @@ dependencies {
     /**
      *===============================ui start=============================
      */
-    api "androidx.compose.ui:ui:$compose_version"
-    api "androidx.compose.material:material:$compose_version"
-    api "androidx.compose.ui:ui-tooling:$compose_version"
-    api 'androidx.activity:activity-compose:1.3.0-beta02'
+//    api "androidx.compose.ui:ui:1.0.1"
+//    api "androidx.compose.material:material:1.0.1"
+//    api "androidx.compose.ui:ui-tooling:1.0.1"
+//    api 'androidx.activity:activity-compose:1.3.1'
     api "androidx.compose.compiler:compiler:1.0.0-beta08"
-    androidTestApi "androidx.compose.ui:ui-test-junit4:$compose_version"
+//    androidTestApi "androidx.compose.ui:ui-test-junit4:1.0.1"
+    api 'androidx.compose.ui:ui:1.0.0-rc02'
+    // Tooling support (Previews, etc.)
+    api 'androidx.compose.ui:ui-tooling:1.0.0-rc02'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    api 'androidx.compose.foundation:foundation:1.0.0-rc02'
+    // Material Design
+    api 'androidx.compose.material:material:1.0.0-rc02'
+    // Material design icons
+    api 'androidx.compose.material:material-icons-core:1.0.0-rc02'
+    api 'androidx.compose.material:material-icons-extended:1.0.0-rc02'
+    // Integration with activities
+    api 'androidx.activity:activity-compose:1.3.0-rc02'
+    // Integration with ViewModels
+    api 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+    // Integration with observables
+    api 'androidx.compose.runtime:runtime-livedata:1.0.0-rc02'
+    api 'androidx.compose.runtime:runtime-rxjava2:1.0.0-rc02'
+
+    // UI Tests
+    androidTestApi 'androidx.compose.ui:ui-test-junit4:1.0.0-rc02'
     /**
      *===============================ui end=============================
      */
