--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,14 @@ kotlin.code.style=official
 android.debug.obsoleteApi=true
 -Djavax.net.ssl.trustStore=/path/to/truststore -Djavax.net.ssl.trustStorePassword=password
 android.injected.testOnly=false
-applicationId=com.jamesfchen.spacecraft
 firebasePerformanceInstrumentationEnabled=false
 
+
+applicationId=com.jamesfchen.spacecraft
+compileSdkVersion = 30
+buildToolsVersion = 30.0.2
+#19:kk,21:L,23:M,24:N,26:O,28:P
+minSdkVersion = 23
+targetSdkVersion = 30
+versionCode = 2
+versionName = 2.0.0
