promote gradle script
Signed-off-by: JamesfChen <hawks.jamesf@gmail.com>

--- a/script/app_module.gradle
+++ b/script/app_module.gradle
@@ -13,7 +13,7 @@ apply plugin: 'com.google.gms.google-services'
 //}
 apply from: "${rootDir.path}/script/file_counter.gradle"
 counterConfig {
-    seaSrcDirs = true
+    sea = 'all'
 }
 
 android {
