--- a/script/file_counter.gradle
+++ b/script/file_counter.gradle
@@ -1,3 +1,5 @@
+import javax.inject.Inject
+
 apply plugin: CounterPlugin
 
 class CounterPlugin implements Plugin<Project> {
@@ -7,44 +9,26 @@ class CounterPlugin implements Plugin<Project> {
     void apply(Project project) {
         counterExtension = project.extensions.create("counterConfig", CounterExtension)
         def total_srcDir = new ArrayList<File>()
-
+        //所有项目evaluate完成之后的回调
         project.gradle.projectsEvaluated {
-            project.rootProject.allprojects.each { subProject ->
-                if (counterExtension.seaSrcDirs) {
-                    if (subProject.getSubprojects().size() == 0 && subProject.hasProperty("android")) {
-//                            println("CounterPlugin subproject java:${subProject.android.sourceSets.main.java.srcDirs} jni:${subProject.android.sourceSets.main.jni.srcDirs}")
+            project.rootProject.allprojects.each { proj ->
+                if (counterExtension.sea == 'all') {
+                    if (proj.getSubprojects().size() == 0 && proj.hasProperty("android")) {
+//                            println("CounterPlugin subproject java:${proj.android.sourceSets.main.java.srcDirs} jni:${proj.android.sourceSets.main.jni.srcDirs}")
 
-                        total_srcDir.addAll(subProject.android.sourceSets.main.java.srcDirs)
-                        total_srcDir.addAll(subProject.android.sourceSets.main.jni.srcDirs)
+                        total_srcDir.addAll(proj.android.sourceSets.main.java.srcDirs)
+                        total_srcDir.addAll(proj.android.sourceSets.main.jni.srcDirs)
                     }
-                } else {
-                    if (subProject.name == project.name) {
-//                            println("CounterPlugin subproject java:${subProject.android.sourceSets.main.java.srcDirs} jni:${subProject.android.sourceSets.main.jni.srcDirs}")
-                        total_srcDir.addAll(subProject.android.sourceSets.main.java.srcDirs)
-                        total_srcDir.addAll(subProject.android.sourceSets.main.jni.srcDirs)
-                    }
+                } else if (counterExtension.sea == 'here' && proj.name == project.name) {
+//                            println("CounterPlugin subproject java:${proj.android.sourceSets.main.java.srcDirs} jni:${proj.android.sourceSets.main.jni.srcDirs}")
+                    total_srcDir.addAll(proj.android.sourceSets.main.java.srcDirs)
+                    total_srcDir.addAll(proj.android.sourceSets.main.jni.srcDirs)
                 }
             }
-        }
-
-        if (project.android.hasProperty("applicationVariants")) {
-            project.afterEvaluate {
-                createCounterTask(project, total_srcDir)
+            CounterTask counterTask = project.tasks.create(name: "fileCounter", group: 'tools', type: CounterTask, constructorArgs: [total_srcDir])
+            counterTask.doFirst {
+                if (total_srcDir.isEmpty()) throw new IllegalArgumentException("total_srcDir空空如也")
             }
-        } else if (project.android.hasProperty("libraryVariants")) {
-            project.afterEvaluate {
-                createCounterTask(project, total_srcDir)
-            }
-        }
-    }
-
-    def createCounterTask(Project project, List<File> srcDirs) {
-        if (srcDirs.size() == 0) return
-        CounterTask counterTask = project.tasks.create("counter", CounterTask)
-        counterTask.doFirst {
-            counterTask.srcDirs = srcDirs
-        }
-        counterTask.doLast {
         }
     }
 }
@@ -80,6 +64,11 @@ class CounterTask extends DefaultTask {
     @Input
     int c_files = 0
 
+    @Inject
+    CounterTask(List<File> srcDirs) {
+        this.srcDirs = srcDirs
+    }
+
     @TaskAction
     def startCounting() {
         if (srcDirs == null || srcDirs.size() == 0) return
@@ -94,11 +83,10 @@ class CounterTask extends DefaultTask {
 //        }
 
 //        PrintUtil.printInfo("CounterPlugin task action srcDir : ${srcDirs.size()} ")
-        P.info("CounterPlugin task action start\n")
         srcDirs.each { srcDir ->
             printDirectoryTree(srcDir)
         }
-        P.info("CounterPlugin task action end>>> totals : ${j_f_totals} java/${j_l_totals} lines, " +
+        println("CounterPlugin task action end>>> totals : ${j_f_totals} java/${j_l_totals} lines, " +
                 "${k_f_totals} kotlin/${k_l_totals} lines," +
                 " ${c_f_totals} c or c++/${c_l_totals} lines  \n\r")
         def map = new HashMap<String, String>()
@@ -138,7 +126,7 @@ class CounterTask extends DefaultTask {
         int indent = 0
         StringBuilder sb = new StringBuilder()
         printDirectoryTree(dir, indent, sb);
-        P.info("${dir.path}\n$sb>>> ${j_files} java/${j_lines} lines, " +
+        println("${dir.path}\n$sb>>> ${j_files} java/${j_lines} lines, " +
                 "${k_files} kotlin/${k_lines} lines," +
                 "${c_files} kotlin/${c_lines} lines," +
                 "\n\r")
@@ -209,6 +197,6 @@ class CounterTask extends DefaultTask {
 }
 
 class CounterExtension {
-    boolean seaSrcDirs = false
+    String sea = 'all'
 
 }
