--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.70"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
 //        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
-//        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
         classpath 'com.google.gms:google-services:4.3.8'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
