--- a/framework/loader/src/main/AndroidManifest.xml
+++ b/framework/loader/src/main/AndroidManifest.xml
@@ -96,6 +96,9 @@
             <meta-data
                 android:name="com.jamesfchen.loader.LoggerInitializer"
                 android:value="androidx.startup" />
+            <meta-data
+                android:name="com.jamesfchen.loader.ImageInitializer"
+                android:value="androidx.startup" />
         </provider>
     </application>
 </manifest>
