--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs'
 apply from: "${rootDir.path}/script/console.gradle"
 //def snmae=
 //def lastindex= snmae.indexOf('ModulePlugin')
