--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -1,9 +1,4 @@
 //noinspection GradleDynamicVersion
-ext.srcDirs = [
-        "async",
-        "serialization",
-        "apm",
-]
 //apply plugin: 'foundation-module'
 apply from: "${rootDir.path}/script/foundation_module.gradle"
 android {
@@ -37,13 +32,17 @@ android {
 //        pickFirst 'lib/x86/libhawks.so'
 ////        pickFirst 'lib/mips/libRSSupport.so'
 //    }
+    def srcDirs = [
+            "async",
+            "serialization",
+            "apm",
+    ]
     sourceSets {
-        if (project.hasProperty("srcDirs")) {
             main {
                 java.excludes = [
                         '**/build/**',
                 ]
-                project.ext.srcDirs.forEach {
+                srcDirs.forEach {
                     assets.srcDirs += "$projectDir/$it/main/assets"
                     aidl.srcDirs += "$projectDir/$it/main/aidl"
                     res.srcDirs += "$projectDir/$it/main/res-frame-animation"
@@ -57,7 +56,7 @@ android {
                 }
             }
             androidTest {
-                project.ext.srcDirs.forEach {
+                srcDirs.forEach {
                     assets.srcDirs += "$projectDir/$it/androidTest/assets"
                     aidl.srcDirs += "$projectDir/$it/androidTest/aidl"
                     res.srcDirs += "$projectDir/$it/androidTest/res"
@@ -66,11 +65,10 @@ android {
                 }
             }
             test {
-                project.ext.srcDirs.forEach {
+                srcDirs.forEach {
                     java.srcDirs += "$projectDir/$it/test/java"
                 }
 
-            }
         }
     }
 }
@@ -191,12 +189,12 @@ dependencies {
     releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
     debugApi "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
     api 'com.github.markzhai:blockcanary-android:1.5.0'
-    api platform('com.google.firebase:firebase-bom:28.0.1')
-    api 'com.google.firebase:firebase-perf'
-    api 'com.google.firebase:firebase-perf-ktx'
-    api 'com.google.firebase:firebase-config'
-    api 'com.google.firebase:firebase-storage'
-    api 'com.google.firebase:firebase-storage-ktx'
+//    api platform('com.google.firebase:firebase-bom:28.0.1')
+//    api 'com.google.firebase:firebase-perf'
+//    api 'com.google.firebase:firebase-perf-ktx'
+//    api 'com.google.firebase:firebase-config'
+//    api 'com.google.firebase:firebase-storage'
+//    api 'com.google.firebase:firebase-storage-ktx'
 
     api 'com.facebook.stetho:stetho:1.5.1'
     api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
