--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -47,5 +47,6 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
     api 'io.github.jamesfchen:lifecycle-api:1.0.2'
     implementation "androidx.startup:startup-runtime:1.0.0"
+    api 'com.alibaba:arouter-api:1.3.2'
 }
 
