move uicomponent photo module to myhome module
Signed-off-by: JamesfChen <hawks.jamesf@gmail.com>

--- a/module_config.json
+++ b/module_config.json
@@ -109,7 +109,8 @@
       "deps": [
         ":framework:network",
         ":framework:uicomponent",
-        ":framework:av"
+        ":framework:av",
+        ":framework:image"
       ]
     },
     {
