--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -28,7 +28,7 @@ android {
     }
     buildFeatures {
         viewBinding true
-        dataBinding true
+//        dataBinding true
         compose true
     }
     composeOptions {
