--- a/components/home-module/myhome/src/main/AndroidManifest.xml
+++ b/components/home-module/myhome/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name="com.jamesfchen.myhome.MainActivity"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+            android:theme="@style/HomeAppTheme"
             android:label="@string/title_activity_main"
             android:launchMode="singleTop"
             android:exported="true">
@@ -91,6 +91,12 @@
             </intent-filter>
 
         </receiver>
+        <activity
+            android:name="com.jamesfchen.myhome.screen.photo.PhotoActivity"
+            android:label="PhoteoActivity"
+            android:theme="@style/PhotoTheme" />
+        <activity android:name="com.jamesfchen.myhome.screen.photo.PhotoListActivity" />
+        <activity android:name="com.jamesfchen.myhome.screen.photo.LargePhotoActivity" />
     </application>
 
 </manifest>
