--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -3,12 +3,10 @@ apply from: "${rootDir.path}/script/foundation_module.gradle"
 def srcDirs = [
         "colorpicker",
         "drawable",
-        "navigation",
         "bottomupDialog",
         "launchmode",
         "fragmentx",
         "testStyle",
-        "photo",
         "feedback",
         "customview",
 
@@ -77,7 +75,7 @@ dependencies {
 
 
     //layout start
-    api 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
+    api 'androidx.constraintlayout:constraintlayout:2.1.0'
     api 'com.google.android:flexbox:1.1.0'
     //layout end
 
