--- a/components/home-module/main/src/main/AndroidManifest.xml
+++ b/components/home-module/main/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     package="com.jamesfchen.home">
 
     <application
         android:label="@string/app_name"
+        android:theme="@style/HomeAppTheme"
+        tools:replace="android:theme"
         >
         <activity
             android:name="com.jamesfchen.myhome.SplashActivity"
