--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -189,12 +189,9 @@ dependencies {
     releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
     debugApi "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
     api 'com.github.markzhai:blockcanary-android:1.5.0'
-//    api platform('com.google.firebase:firebase-bom:28.0.1')
-//    api 'com.google.firebase:firebase-perf'
-//    api 'com.google.firebase:firebase-perf-ktx'
-//    api 'com.google.firebase:firebase-config'
-//    api 'com.google.firebase:firebase-storage'
-//    api 'com.google.firebase:firebase-storage-ktx'
+    api platform('com.google.firebase:firebase-bom:28.0.1')
+    api 'com.google.firebase:firebase-perf'
+    api 'com.google.firebase:firebase-perf-ktx'
 
     api 'com.facebook.stetho:stetho:1.5.1'
     api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
