--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -48,5 +48,9 @@ dependencies {
     api 'io.github.jamesfchen:lifecycle-api:1.0.2'
     implementation "androidx.startup:startup-runtime:1.0.0"
     api 'com.alibaba:arouter-api:1.3.2'
+
+    api 'com.firebaseui:firebase-ui-database:6.0.2'
+    api 'com.firebaseui:firebase-ui-firestore:6.0.2'
+    api 'com.firebaseui:firebase-ui-storage:6.0.2'
 }
 
